Implementing Jwt expiration time and logout functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.mail.port=2525
 spring.mail.username=af849a7e4fbd8c
 spring.mail.password=45d1daf9fa29ed
 spring.mail.protocol=smtp
+
+################# JWT Properties ##########################################
+jwt.expiration.time=90000
